--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ enableEmoji = true
 
 # For search functionality
 [outputs]
-home = [ "HTML", "RSS", "SEARCH"]
+home = [ "HTML", "RSS", "SEARCH", "SEARCHPAGE"]
 section = ["HTML", "RSS", "PRINT"]
 page = ["HTML", "RSS", "PRINT"]
 
