--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,13 +3,13 @@ updates:
   - package-ecosystem: "gitsubmodule"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     labels:
       - "automerge"
   - package-ecosystem: "github-actions"
     directory: "/"
     open-pull-requests-limit: 1
     schedule:
-      interval: "daily"
+      interval: "weekly"
     labels:
       - "automerge"
