--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ enableEmoji = true
 [params]
   mathJaxInitialize = "{ \"chtml\": { \"displayAlign\": \"left\" } }"
   description = "Template for Hugo Relearn Theme"
-  author = "Wen-Wei Tseng"
+  author.name = "Wen-Wei Tseng"
   themeVariant = [ "relearn-light", "relearn-dark", "learn", "neon", "blue", "green", "red" ]
 
 [markup]
