--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,10 +20,8 @@ jobs:
       - name: checkout
         uses: actions/checkout@v4
         with:
-          # submodules: true # Fetch Hugo themes (true OR recursive)
+          submodules: true # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0 # Fetch all history for .GitInfo and .Lastmod
-      - name: Shallow clone submodule
-        run: git submodule update --init --recursive --depth=1
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
